--- a/index.qmd
+++ b/index.qmd
@@ -87,13 +87,11 @@ shout-out as well. This research would not have been possible without
 the resources available through CHTC and the guidance I received during
 CHTC office hours.
 
-I also want to recognize the University of Wisconsin Writing Center.
-Having access to such incredible resources helped me shape this work,
-and I’m very grateful for the support that made it possible.
+I also want to recognize the University of Wisconsin Writing Center. I'm
+grateful to have access to such incredible resources.
 
 Many thanks to my advisor, Amy, for her patience and encouragement. I
-couldn’t have asked for a better guide through this process, and I’m so
-grateful for her support.
+couldn’t have asked for a better guide through this process.
 
 To my badass PhD friends across departments—Megan, Susan, Erica, Juliet,
 Haley, and April —thanks for cheerleading and commiserating!
